-> am inclus dependintele necesare in pom.xml  pentru conexiunea cu baza de date mysql -> in application.properties am inclus credentialele pentru conexiune

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
+<!--        <dependency>-->
+<!--            <groupId>xml-apis</groupId>-->
+<!--            <artifactId>xml-apis</artifactId>-->
+<!--            <version>1.4.01.jar</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
         <dependency>
             <!-- Spring boot dependency -->
             <groupId>org.springframework.boot</groupId>
