--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/restapi
+spring.datasource.url=jdbc:mysql://0.tcp.ngrok.io:11102/restapi
 spring.datasource.username=root
-spring.datasource.password=codeperks3
+spring.datasource.password=tiMMy?2019
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
