-> am inclus dependintele necesare in pom.xml  pentru conexiunea cu baza de date mysql -> in application.properties am inclus credentialele pentru conexiune

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://0.tcp.ngrok.io:11102/restapi
+spring.datasource.url=jdbc:mysql://0.tcp.ngrok.io:11102/chatzone
 spring.datasource.username=root
 spring.datasource.password=tiMMy?2019
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
