--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/restapi?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/greendress?user=root&password=tiMMy?2019&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=codeperks3
+spring.datasource.password=tiMMy?2019
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto = update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.serverTimezone=useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=true
 
 
 
