Fixed some stuff in the controllers and in, by adding the PathVariable annotation to delete methods, and made some name changes in the entity classes.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     password: tiMMy?2019
-    url: jdbc:mysql://localhost:3306/greendress
+    url: jdbc:mysql://0.tcp.ngrok.io:11642/greendress
     driver-class-name: com.mysql.cj.jdbc.Driver
     serverTimezone: useLegacyDatetimeCode=false&serverTimezone=UTC
 jpa:
